# nanoboost-api

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  reviews-data.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_games_table.py  0003_create_services_and_options.py  0004_create_clients_orders.py  0005_orders_schema_alignment.py  0006_create_reviews.py  0007_dual_image_fields.py  0008_payment_infrastructure.py  0009_game_status_enum.py  0010_contact_submissions.py  0011_order_final_total_eur.py  0012_order_payment_claimed_at.py  0013_game_faqs.py  0014_extend_order_status.py  0015_service_option_discount.py  0016_decimal_discount_percent.py
app/: main.py
app/core/: config.py  constants.py  dependencies.py  exceptions.py  permissions.py  security.py
app/db/: session.py
app/scripts/: create_superuser.py
app/shared/: cache.py  logging.py  pagination.py  rate_limit.py  scheduler.py
docs/: api-contract.md  deploy.md  openapi-snapshot.json
scripts/: cleanup_duplicate_games.py  dump_openapi_snapshot.py  entrypoint.sh  import_legacy_games.py  import_legacy_reviews.py  import_legacy_services.py  migrate_legacy_images.py  reupload_images.py  seed_orders.py  seed_test_data.py
tests/: conftest.py
tests/contracts/: conftest.py  test_public_api_contracts.py
tests/e2e/: test_startup.py
tests/features/: test_auth.py  test_clients.py  test_dashboard.py  test_games.py  test_legacy_importer.py  test_orders.py  test_public_orders.py  test_reviews.py  test_service_options.py  test_services.py  test_uploads.py  test_users.py
(+102 files in other folders)
