[project]
name = "nanoboost-api"
version = "1.0.0"
description = "Nanoboost Admin REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "greenlet>=3.1.0",
    "pillow>=11.0.0",
    "aiosmtplib>=3.0.2",
    "httpx>=0.28.0",
    "apscheduler>=3.10.4",
    "redis>=5.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "fakeredis>=2.26",
    "syrupy>=4.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET"]
ignore = ["B008", "A003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["A", "N"]
"alembic/*" = ["E501"]
"scripts/*" = ["E501", "I001", "N", "F401", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a real Postgres backend (skipped under SQLite)",
    "contract: API contract snapshot test — fails on response-shape drift",
]
